order-service/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordproc-order-service
  namespace: <PROJECT>
  labels:
    app: <PROJECT>-order-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: <PROJECT>-order-service
