order-service/config/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: <PROJECT>-order-service
  namespace: <PROJECT>
spec:
  podSelector:
    matchLabels:
      app: <PROJECT>-order-service
  ingress:
    - ports:
        - port: 80
      from:
        - podSelector:
            matchLabels:
              purpose: curl
        - podSelector:
            matchLabels:
              app: compositeop
        - namespaceSelector:
            matchLabels:
              purpose: istio-system
        - namespaceSelector:
            matchLabels:
              purpose: kube-system
